Implement student management features and UI updates
- Added CRUD methods for managing students in DatabaseManager.cs.
- Updated Dienynas.csproj to ensure Grade.cs is copied to output.
- Enhanced InOutUtils.cs with methods for student operations.
- Revamped MainWindow.xaml with a new menu for student management.
- Added event handlers in MainWindow.xaml.cs for menu actions.
- Introduced a parameterless constructor in Student.cs for flexibility.
- Cleaned up redundant using directives in Student.cs.

--- a/Dienynas/Dienynas.csproj
+++ b/Dienynas/Dienynas.csproj
@@ -108,7 +108,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DatabaseManager.cs" />
-    <Compile Include="Grade.cs" />
+    <Compile Include="Grade.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="InOutUtils.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Student.cs" />
