Add database management features and UI improvements
- Implemented `AddGrade` and `ResetDatabase` methods in `DatabaseManager.cs` for grade management and database reset functionality.
- Updated `Dienynas.csproj` to include `TaskUtils.cs`.
- Changed `LoadStudentGradesMatrix` to a static method in `InOutUtils.cs` for easier access.
- Modified `MainWindow.xaml` layout and added a menu item for deleting all data.
- Updated `MainWindow.xaml.cs` to reflect new method calls and improve UI handling.
- Created a new `TaskUtils` class for future task management features.

--- a/Dienynas/Dienynas.csproj
+++ b/Dienynas/Dienynas.csproj
@@ -114,6 +114,7 @@
     <Compile Include="InOutUtils.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Student.cs" />
+    <Compile Include="TaskUtils.cs" />
     <Compile Include="VisibilityManager.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
